--- a/tester-portal.html
+++ b/tester-portal.html
@@ -76,10 +76,16 @@
     <header>
       <div class="nav-inner">
         <div class="nav-bar">
-          <div class="nav-left">
-            <div class="nav-logo-mark">PX</div>
-            <div class="nav-logo-text">PROX</div>
-          </div>
+         <div class="nav-left">
+  <a href="index.html" class="nav-logo-link">
+    <img
+      src="img/prox-logo.svg"
+      alt="Prox logo"
+      class="nav-logo-image"
+    />
+  </a>
+</div>
+
           <div class="nav-right">
             <nav class="nav-links">
               <a href="index.html">Home</a>
