--- a/testers.html
+++ b/testers.html
@@ -16,9 +16,15 @@
       <div class="nav-inner">
         <div class="nav-bar">
           <div class="nav-left">
-            <div class="nav-logo-mark">PX</div>
-            <div class="nav-logo-text">PROX</div>
-          </div>
+  <a href="index.html" class="nav-logo-link">
+    <img
+      src="img/prox-logo.svg"
+      alt="Prox logo"
+      class="nav-logo-image"
+    />
+  </a>
+</div>
+
           <div class="nav-right">
             <nav class="nav-links">
               <a href="index.html">Home</a>
@@ -167,3 +173,4 @@
     </footer>
   </body>
 </html>
+
