--- a/tester-portal.html
+++ b/tester-portal.html
@@ -18,10 +18,10 @@
       // TODO: Paste your real Firebase web app config here
       // from the Firebase console (Project settings → General → Your apps → Web app).
       const firebaseConfig = {
-        apiKey: "YOUR_API_KEY_HERE",
-        authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
-        projectId: "YOUR_PROJECT_ID",
-        appId: "YOUR_APP_ID",
+        apiKey: "AIzaSyDctrHc4P2DAv1FMGqOc0U1TkUrlCdOGEg",
+        authDomain: "prox-42bef.firebaseapp.com",
+        projectId: "prox-42bef",
+        appId: "1:12575732319:android:64a27bc83029e01c5561ea",
       };
 
       firebase.initializeApp(firebaseConfig);
