--- a/tester-portal.html
+++ b/tester-portal.html
@@ -290,7 +290,7 @@
 
         // === SIMPLE FRONT-END PASSWORD GATE ===
         // Change this value whenever you want a new password.
-        const TESTER_PORTAL_PASSWORD = "prox-test-2025";
+        const TESTER_PORTAL_PASSWORD = "Welcome1";
         const STORAGE_KEY = "proxTesterPortalUnlocked";
 
         function unlockTesterPortal() {
